# rinzler

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md  demo.cast  hosts.tx  hosts.txt  out.txt  test-report.txt  todo.txt
.github/workflows/: ci.yml
rinzler/: Cargo.toml  README.md
rinzler-cli/: Cargo.toml
rinzler-cli/src/: arguments.rs  main.rs
rinzler-core/: Cargo.toml
rinzler-core/src/: crawl.rs  data.rs  fuzz.rs  lib.rs  map.rs  model.rs  report.rs  security.rs
rinzler-core/tests/: crawl_tests.rs  database_tests.rs  fuzz_tests.rs  report_tests.rs  security_tests.rs
rinzler-scanner/: Cargo.toml
rinzler-scanner/src/: crawler.rs  error.rs  lib.rs  result.rs
rinzler-tui/: Cargo.toml
rinzler-tui/src/: crawl_monitor.rs  lib.rs
rinzler/src/: arguments.rs  commands.rs  handlers.rs  lib.rs  main.rs
rinzler/tests/: handlers_tests.rs
rinzler/wordlists/: default.txt
scripts/: README.md  bump-version.sh  install-hooks.sh
