[workspace]
resolver = "2"
members = [
    "rinzler",
    "rinzler-core",
    "rinzler-scanner",
    "rinzler-tui",
]

[workspace.package]
version = "0.1.2-alpha"
edition = "2024"
description = "Rinzler - a somewhat intelligent API scanner"
authors = ["akses0 <akses0@pm.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/trapdoorsec/rinzler"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12.25", features = ["json", "gzip", "cookies"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# TUI
ratatui = "0.29"
crossterm = "0.29.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Graph
petgraph = "0.8.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL handling
url = "2.5"
