[package]
name = "rinzler-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
rinzler-core = { path = "../rinzler-core" }
rinzler-scanner = { path = "../rinzler-scanner" }
rinzler-tui = { path = "../rinzler-tui" }

# Just reference workspace deps (no versions needed!)
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
clap-cargo = "0.18.3"
url = "2.5.7"