[package]
name = "rinzler-core"
version.workspace = true
edition.workspace = true
description = "Core library for Rinzler - API scanner data models and database"
authors = ["akses0 <akses0@pm.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/trapdoorsec/rinzler"
readme = "../README.md"
keywords = ["security", "api", "scanner", "pentesting"]
categories = ["command-line-utilities", "development-tools"]

[lib]

[dependencies]
rusqlite.workspace = true
rinzler-scanner = { version = "0.1.12-alpha-251215015639", path = "../rinzler-scanner" }
tokio.workspace = true
url.workspace = true
indicatif.workspace = true