[package]
name = "rinzler-core"
version.workspace = true
edition.workspace = true
description = "Core library for Rinzler - API scanner data models and database"
authors = ["akses0 <akses0@pm.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/trapdoorsec/rinzler"
readme = "../README.md"
keywords = ["security", "api", "scanner", "pentesting"]
categories = ["command-line-utilities", "development-tools"]

[lib]

[dependencies]
rusqlite.workspace = true
rinzler-scanner = { version = "0.1.10-alpha", path = "../rinzler-scanner" }
tokio.workspace = true
url.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.10", features = ["v4"] }
chrono.workspace = true