[package]
name = "rinzler-scanner"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

# HTML parsing
scraper = "0.20"

# Async utilities
futures.workspace = true
