[package]
name = "rinzler"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rinzler-core = { path ="../rinzler-core"}
rinzler-tui = { path = "../rinzler-tui" }
rinzler-scanner = { path = "../rinzler-scanner" }
# Just reference workspace deps (no versions needed!)
url.workspace = true
clap.workspace = true
shellexpand.workspace = true
clap-cargo.workspace = true
indicatif.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true