[package]
name = "rinzler"
version.workspace = true
edition.workspace = true
description = "Rinzler - a somewhat intelligent API scanner"
authors = ["akses0 <akses0@pm.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/trapdoorsec/rinzler"
readme = "../README.md"
keywords = ["security", "api", "scanner", "pentesting", "fuzzer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rinzler-core = { version = "0.1.11-alpha", path = "../rinzler-core" }
rinzler-scanner = { version = "0.1.11-alpha", path = "../rinzler-scanner" }
# Just reference workspace deps (no versions needed!)
url.workspace = true
clap.workspace = true
shellexpand.workspace = true
clap-cargo.workspace = true
indicatif.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pager.workspace = true

[dev-dependencies]
tempfile.workspace = true